src/Components/App.scss
@import '../sass/reset.scss';
@import '../sass/colors.scss';

$header-height: 80px;

body, html {
  font-family: Roboto, Arial, Helvetica, sans-serif;
  background: $color-blue;
  box-sizing: border-box;
  color: #333333;
  font-size: 16px;
}
.chat-content {
  height: 100%;
  width: 100%;
  padding: 10px;
}
.chat-wrap-card {
  width: 100%;
  text-align: right;
  margin: 0 0 15px;

  .MuiPaper-root {
    display: inline-block;
    padding: 10px 25px;
    background: $color-blue-dark;
    color: #ffffff;
  }

  &.chat-bot {
    text-align: left;

    .MuiPaper-root {
      background: $color-pink-dirty-dark;
    }
  }
}
.chat-area {
  height: 93vh;
  background: $color-gray;
}
.chat-input {
  background: #ffffff;
}
.chat-init-error {
  display: flex;
  align-items: center;
  margin: 0 auto;
  color: $color-pink;
}

